// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Route Path Generic Controller Should contains correct query parameter 1`] = `
Array [
  Array [
    "1234",
  ],
]
`;

exports[`Custom Route Path Generic Controller Should generate routes with parameter property entity 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultControllerGeneric.list            -> GET    /user",
  ],
  Array [
    "2. DefaultControllerGeneric.save(data, ctx) -> POST   /user",
  ],
  Array [
    "3. DefaultControllerGeneric.get             -> GET    /user/:userid",
  ],
  Array [
    "4. DefaultControllerGeneric.modify          -> PATCH  /user/:userid",
  ],
  Array [
    "5. DefaultControllerGeneric.replace         -> PUT    /user/:userid",
  ],
  Array [
    "6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /user/:userid",
  ],
  Array [],
]
`;

exports[`Custom Route Path Generic Controller Should throw error when no parameter at the end 1`] = `
Array [
  Array [
    [Error: PLUM1011: Custom route path 'user/:userId/data' on User entity, require path that ends with route parameter, example: animals/:animalId],
  ],
]
`;

exports[`Custom Route Path Generic Controller Should throw error when provided more than one parameter 1`] = `
Array [
  Array [
    [Error: PLUM1013: Custom route path 'user/:userId/data/:dataId' on User entity, must have one route parameter, example: animals/:animalId],
  ],
]
`;

exports[`Custom Route Path Generic Controller Should throw error when provided no parameter 1`] = `
Array [
  Array [
    [Error: PLUM1011: Custom route path 'user' on User entity, require path that ends with route parameter, example: animals/:animalId],
  ],
]
`;

exports[`Custom Route Path Generic One To Many Controller Should able to provide custom route path 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultOneToMany...eneric.list    -> GET    /user/:userid/animal",
  ],
  Array [
    "2. DefaultOneToMany...eneric.save    -> POST   /user/:userid/animal",
  ],
  Array [
    "3. DefaultOneToMany...eneric.get     -> GET    /user/:userid/animal/:animalid",
  ],
  Array [
    "4. DefaultOneToMany...eneric.modify  -> PATCH  /user/:userid/animal/:animalid",
  ],
  Array [
    "5. DefaultOneToMany...eneric.replace -> PUT    /user/:userid/animal/:animalid",
  ],
  Array [
    "6. DefaultOneToMany...eneric.delete  -> DELETE /user/:userid/animal/:animalid",
  ],
  Array [],
]
`;

exports[`Custom Route Path Generic One To Many Controller Should contains correct query parameter 1`] = `
Array [
  Array [
    "1234",
  ],
  Array [
    "5678",
  ],
]
`;

exports[`Custom Route Path Generic One To Many Controller Should throw error when no parameter at the end 1`] = `
Array [
  Array [
    [Error: PLUM1011: Custom route path 'user/:userId/animal/:animalId/category' on User entity, require path that ends with route parameter, example: animals/:animalId],
  ],
]
`;

exports[`Custom Route Path Generic One To Many Controller Should throw error when provided more than two parameters 1`] = `
Array [
  Array [
    [Error: PLUM1012: Nested custom route path 'user/:userId/animal/:animalId/category/:categoryId' on User entity, must have two route parameters, example: users/:userId/animals/:animalId],
  ],
]
`;

exports[`Custom Route Path Generic One To Many Controller Should throw error when provided no parameter 1`] = `
Array [
  Array [
    [Error: PLUM1011: Custom route path 'user/animal' on User entity, require path that ends with route parameter, example: animals/:animalId],
  ],
]
`;

exports[`Custom Route Path Generic One To Many Controller Should throw error when provided only one parameter 1`] = `
Array [
  Array [
    [Error: PLUM1012: Nested custom route path 'user/:userId' on User entity, must have two route parameters, example: users/:userId/animals/:animalId],
  ],
]
`;

exports[`Open Api Generic Controller Should generate DELETE /animal/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic Controller Should generate DELETE /animal/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic Controller Should generate GET /animal properly 1`] = `
Array [
  Object {
    "in": "query",
    "name": "offset",
    "required": false,
    "schema": Object {
      "type": "number",
    },
  },
  Object {
    "in": "query",
    "name": "limit",
    "required": false,
    "schema": Object {
      "type": "number",
    },
  },
  Object {
    "in": "query",
    "name": "filter",
    "required": false,
    "schema": Object {
      "$ref": "#/components/schemas/Animal",
    },
  },
  Object {
    "in": "query",
    "name": "select",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "order",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic Controller Should generate GET /animal properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic Controller Should generate GET /animal/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "select",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic Controller Should generate GET /animal/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic Controller Should generate PATCH /animal/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic Controller Should generate PATCH /animal/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic Controller Should generate POST /animal properly 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/Animal",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "$ref": "#/components/schemas/Animal",
      },
    },
  },
  "required": true,
}
`;

exports[`Open Api Generic Controller Should generate POST /animal properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic Controller Should generate PUT /animal/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic Controller Should generate PUT /animal/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic Controller Should provided proper component 1`] = `
Object {
  "properties": Object {
    "name": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Open Api Generic One To Many Controller Should generate DELETE /animals/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic One To Many Controller Should generate DELETE /animals/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should generate DELETE /animals/{pid}/tags/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "pid",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic One To Many Controller Should generate DELETE /animals/{pid}/tags/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should generate GET /animals properly 1`] = `
Array [
  Object {
    "in": "query",
    "name": "offset",
    "required": false,
    "schema": Object {
      "type": "number",
    },
  },
  Object {
    "in": "query",
    "name": "limit",
    "required": false,
    "schema": Object {
      "type": "number",
    },
  },
  Object {
    "in": "query",
    "name": "filter",
    "required": false,
    "schema": Object {
      "allOf": Array [
        Object {
          "$ref": "#/components/schemas/Animal",
        },
        Object {
          "properties": Object {
            "tags": Object {
              "items": Object {
                "type": "string",
              },
              "type": "array",
            },
          },
          "type": "object",
        },
      ],
    },
  },
  Object {
    "in": "query",
    "name": "select",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "order",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic One To Many Controller Should generate GET /animals properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should generate GET /animals/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "select",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic One To Many Controller Should generate GET /animals/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should generate GET /animals/{pid}/tags properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "pid",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "offset",
    "required": false,
    "schema": Object {
      "type": "number",
    },
  },
  Object {
    "in": "query",
    "name": "limit",
    "required": false,
    "schema": Object {
      "type": "number",
    },
  },
  Object {
    "in": "query",
    "name": "filter",
    "required": false,
    "schema": Object {
      "$ref": "#/components/schemas/Tag",
    },
  },
  Object {
    "in": "query",
    "name": "select",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "order",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic One To Many Controller Should generate GET /animals/{pid}/tags properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should generate GET /animals/{pid}/tags/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "pid",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "query",
    "name": "select",
    "required": false,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic One To Many Controller Should generate GET /animals/{pid}/tags/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should generate PATCH /animals/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic One To Many Controller Should generate PATCH /animals/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should generate PATCH /animals/{pid}/tags/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "pid",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic One To Many Controller Should generate PATCH /animals/{pid}/tags/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should generate POST /animals properly 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/Animal",
          },
          Object {
            "properties": Object {
              "tags": Object {
                "items": Object {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
        ],
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/Animal",
          },
          Object {
            "properties": Object {
              "tags": Object {
                "items": Object {
                  "type": "string",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
        ],
      },
    },
  },
  "required": true,
}
`;

exports[`Open Api Generic One To Many Controller Should generate POST /animals properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should generate POST /animals/{pid}/tags properly 1`] = `
Object {
  "content": Object {
    "application/json": Object {
      "schema": Object {
        "$ref": "#/components/schemas/Tag",
      },
    },
    "application/x-www-form-urlencoded": Object {
      "schema": Object {
        "$ref": "#/components/schemas/Tag",
      },
    },
  },
  "required": true,
}
`;

exports[`Open Api Generic One To Many Controller Should generate POST /animals/{pid}/tags properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should generate PUT /animals/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic One To Many Controller Should generate PUT /animals/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should generate PUT /animals/{pid}/tags/:id properly 1`] = `
Array [
  Object {
    "in": "path",
    "name": "pid",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
  Object {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": Object {
      "type": "string",
    },
  },
]
`;

exports[`Open Api Generic One To Many Controller Should generate PUT /animals/{pid}/tags/:id properly 2`] = `
Array [
  "Animal",
]
`;

exports[`Open Api Generic One To Many Controller Should provide proper component 1`] = `
Object {
  "properties": Object {
    "name": Object {
      "type": "string",
    },
    "tags": Object {
      "items": Object {
        "$ref": "#/components/schemas/Tag",
      },
      "type": "array",
    },
  },
  "type": "object",
}
`;

exports[`Open Api Generic One To Many Controller Should provide proper component 2`] = `
Object {
  "properties": Object {
    "tag": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;

exports[`Property Binding Generic Controller Should bind on patch method 1`] = `
Array [
  Array [
    "123",
  ],
  Array [
    "123",
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum dolor",
    },
  ],
]
`;

exports[`Property Binding Generic Controller Should bind on post method 1`] = `
Array [
  Array [
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum dolor",
    },
  ],
]
`;

exports[`Property Binding Generic Controller Should bind on post method using property declaration 1`] = `
Array [
  Array [
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum dolor",
    },
  ],
]
`;

exports[`Property Binding Generic Controller Should bind on put method 1`] = `
Array [
  Array [
    "123",
  ],
  Array [
    "123",
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum dolor",
    },
  ],
]
`;

exports[`Property Binding Generic Controller Should bind promise on patch method 1`] = `
Array [
  Array [
    "123",
  ],
  Array [
    "123",
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum",
    },
  ],
]
`;

exports[`Property Binding Generic Controller Should bind promise on post method 1`] = `
Array [
  Array [
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum",
    },
  ],
]
`;

exports[`Property Binding Generic Controller Should bind promise on put method 1`] = `
Array [
  Array [
    "123",
  ],
  Array [
    "123",
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum",
    },
  ],
]
`;

exports[`Property Binding One To Many Controller Should bind on patch method 1`] = `
Array [
  Array [
    "123",
  ],
  Array [
    "123",
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum dolor",
    },
  ],
]
`;

exports[`Property Binding One To Many Controller Should bind on post method 1`] = `
Array [
  Array [
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum dolor",
    },
  ],
]
`;

exports[`Property Binding One To Many Controller Should bind on put method 1`] = `
Array [
  Array [
    "123",
  ],
  Array [
    "123",
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum dolor",
    },
  ],
]
`;

exports[`Property Binding One To Many Controller Should bind promise on patch method 1`] = `
Array [
  Array [
    "123",
  ],
  Array [
    "123",
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum",
    },
  ],
]
`;

exports[`Property Binding One To Many Controller Should bind promise on post method 1`] = `
Array [
  Array [
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum",
    },
  ],
]
`;

exports[`Property Binding One To Many Controller Should bind promise on put method 1`] = `
Array [
  Array [
    "123",
  ],
  Array [
    "123",
    Object {
      "email": "john.doe@gmail.com",
      "name": "John",
      "random": "lorem ipsum",
    },
  ],
]
`;

exports[`Route Generator Generic Controller Should able to change root path 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultControllerGeneric.list            -> GET    /api/v1/user",
  ],
  Array [
    "2. DefaultControllerGeneric.save(data, ctx) -> POST   /api/v1/user",
  ],
  Array [
    "3. DefaultControllerGeneric.get             -> GET    /api/v1/user/:id",
  ],
  Array [
    "4. DefaultControllerGeneric.modify          -> PATCH  /api/v1/user/:id",
  ],
  Array [
    "5. DefaultControllerGeneric.replace         -> PUT    /api/v1/user/:id",
  ],
  Array [
    "6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /api/v1/user/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Generic Controller Should able to ignore some method of controller from entity 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultControllerGeneric.list            -> GET    /user",
  ],
  Array [
    "2. DefaultControllerGeneric.modify          -> PATCH  /user/:id",
  ],
  Array [
    "3. DefaultControllerGeneric.replace         -> PUT    /user/:id",
  ],
  Array [
    "4. DefaultControllerGeneric.delete(id, ctx) -> DELETE /user/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Generic Controller Should able to set authorization for specific method from entity 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultControllerGeneric.list            -> Authenticated GET    /user",
  ],
  Array [
    "2. DefaultControllerGeneric.save(data, ctx) -> admin         POST   /user",
  ],
  Array [
    "3. DefaultControllerGeneric.get             -> Authenticated GET    /user/:id",
  ],
  Array [
    "4. DefaultControllerGeneric.modify          -> admin         PATCH  /user/:id",
  ],
  Array [
    "5. DefaultControllerGeneric.replace         -> admin         PUT    /user/:id",
  ],
  Array [
    "6. DefaultControllerGeneric.delete(id, ctx) -> admin         DELETE /user/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Generic Controller Should able to set authorization from entity 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultControllerGeneric.list            -> admin GET    /user",
  ],
  Array [
    "2. DefaultControllerGeneric.save(data, ctx) -> admin POST   /user",
  ],
  Array [
    "3. DefaultControllerGeneric.get             -> admin GET    /user/:id",
  ],
  Array [
    "4. DefaultControllerGeneric.modify          -> admin PATCH  /user/:id",
  ],
  Array [
    "5. DefaultControllerGeneric.replace         -> admin PUT    /user/:id",
  ],
  Array [
    "6. DefaultControllerGeneric.delete(id, ctx) -> admin DELETE /user/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Generic Controller Should able to set custom authorizer from entity 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultControllerGeneric.list            -> Custom GET    /user",
  ],
  Array [
    "2. DefaultControllerGeneric.save(data, ctx) -> Custom POST   /user",
  ],
  Array [
    "3. DefaultControllerGeneric.get             -> Custom GET    /user/:id",
  ],
  Array [
    "4. DefaultControllerGeneric.modify          -> Custom PATCH  /user/:id",
  ],
  Array [
    "5. DefaultControllerGeneric.replace         -> Custom PUT    /user/:id",
  ],
  Array [
    "6. DefaultControllerGeneric.delete(id, ctx) -> Custom DELETE /user/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Generic Controller Should able to set public authorizer from entity 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultControllerGeneric.list            -> Public GET    /user",
  ],
  Array [
    "2. DefaultControllerGeneric.save(data, ctx) -> Public POST   /user",
  ],
  Array [
    "3. DefaultControllerGeneric.get             -> Public GET    /user/:id",
  ],
  Array [
    "4. DefaultControllerGeneric.modify          -> Public PATCH  /user/:id",
  ],
  Array [
    "5. DefaultControllerGeneric.replace         -> Public PUT    /user/:id",
  ],
  Array [
    "6. DefaultControllerGeneric.delete(id, ctx) -> Public DELETE /user/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Generic Controller Should able to specify ID of type string by providing decorator 1`] = `
Array [
  Object {
    "name": "list",
    "pars": Array [
      Object {
        "name": "offset",
        "type": Number,
      },
      Object {
        "name": "limit",
        "type": Number,
      },
      Object {
        "name": "filter",
        "type": User,
      },
      Object {
        "name": "select",
        "type": String,
      },
      Object {
        "name": "order",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "save",
    "pars": Array [
      Object {
        "name": "data",
        "type": User,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "get",
    "pars": Array [
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "select",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "modify",
    "pars": Array [
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "data",
        "type": User,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "replace",
    "pars": Array [
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "data",
        "type": User,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "delete",
    "pars": Array [
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
]
`;

exports[`Route Generator Generic Controller Should able to specify ID type by providing decorator 1`] = `
Array [
  Object {
    "name": "list",
    "pars": Array [
      Object {
        "name": "offset",
        "type": Number,
      },
      Object {
        "name": "limit",
        "type": Number,
      },
      Object {
        "name": "filter",
        "type": User,
      },
      Object {
        "name": "select",
        "type": String,
      },
      Object {
        "name": "order",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "save",
    "pars": Array [
      Object {
        "name": "data",
        "type": User,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "get",
    "pars": Array [
      Object {
        "name": "id",
        "type": Number,
      },
      Object {
        "name": "select",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "modify",
    "pars": Array [
      Object {
        "name": "id",
        "type": Number,
      },
      Object {
        "name": "data",
        "type": User,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "replace",
    "pars": Array [
      Object {
        "name": "id",
        "type": Number,
      },
      Object {
        "name": "data",
        "type": User,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "delete",
    "pars": Array [
      Object {
        "name": "id",
        "type": Number,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
]
`;

exports[`Route Generator Generic Controller Should able to use custom controller 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MyCustomControllerGeneric.list    -> GET    /api/v1/user",
  ],
  Array [
    "2. MyCustomControllerGeneric.save    -> POST   /api/v1/user",
  ],
  Array [
    "3. MyCustomControllerGeneric.get     -> GET    /api/v1/user/:id",
  ],
  Array [
    "4. MyCustomControllerGeneric.modify  -> PATCH  /api/v1/user/:id",
  ],
  Array [
    "5. MyCustomControllerGeneric.replace -> PUT    /api/v1/user/:id",
  ],
  Array [
    "6. MyCustomControllerGeneric.delete  -> DELETE /api/v1/user/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Generic Controller Should generate routes with parameter property entity 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultControllerGeneric.list            -> GET    /user",
  ],
  Array [
    "2. DefaultControllerGeneric.save(data, ctx) -> POST   /user",
  ],
  Array [
    "3. DefaultControllerGeneric.get             -> GET    /user/:id",
  ],
  Array [
    "4. DefaultControllerGeneric.modify          -> PATCH  /user/:id",
  ],
  Array [
    "5. DefaultControllerGeneric.replace         -> PUT    /user/:id",
  ],
  Array [
    "6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /user/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Generic Controller Should generate routes with property field entity 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultControllerGeneric.list            -> GET    /user",
  ],
  Array [
    "2. DefaultControllerGeneric.save(data, ctx) -> POST   /user",
  ],
  Array [
    "3. DefaultControllerGeneric.get             -> GET    /user/:id",
  ],
  Array [
    "4. DefaultControllerGeneric.modify          -> PATCH  /user/:id",
  ],
  Array [
    "5. DefaultControllerGeneric.replace         -> PUT    /user/:id",
  ],
  Array [
    "6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /user/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Generic Controller Should not generate entity that is not marked as controller 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "No controller found",
  ],
]
`;

exports[`Route Generator Generic Controller Should throw error properly 1`] = `Array []`;

exports[`Route Generator Generic Controller Should use string as default id if no ID type specified 1`] = `
Array [
  Object {
    "name": "list",
    "pars": Array [
      Object {
        "name": "offset",
        "type": Number,
      },
      Object {
        "name": "limit",
        "type": Number,
      },
      Object {
        "name": "filter",
        "type": User,
      },
      Object {
        "name": "select",
        "type": String,
      },
      Object {
        "name": "order",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "save",
    "pars": Array [
      Object {
        "name": "data",
        "type": User,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "get",
    "pars": Array [
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "select",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "modify",
    "pars": Array [
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "data",
        "type": User,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "replace",
    "pars": Array [
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "data",
        "type": User,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "delete",
    "pars": Array [
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
]
`;

exports[`Route Generator Grouping Should able to group one to many routes 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultOneToMany...eneric.list    -> GET    /api/v2/user/:pid/animals",
  ],
  Array [
    "2. DefaultOneToMany...eneric.save    -> POST   /api/v2/user/:pid/animals",
  ],
  Array [
    "3. DefaultOneToMany...eneric.get     -> GET    /api/v2/user/:pid/animals/:id",
  ],
  Array [
    "4. DefaultOneToMany...eneric.modify  -> PATCH  /api/v2/user/:pid/animals/:id",
  ],
  Array [
    "5. DefaultOneToMany...eneric.replace -> PUT    /api/v2/user/:pid/animals/:id",
  ],
  Array [
    "6. DefaultOneToMany...eneric.delete  -> DELETE /api/v2/user/:pid/animals/:id",
  ],
  Array [],
  Array [
    "1. DefaultOneToMany...eneric.list    -> GET    /api/v1/user/:pid/animals",
  ],
  Array [
    "2. DefaultOneToMany...eneric.save    -> POST   /api/v1/user/:pid/animals",
  ],
  Array [
    "3. DefaultOneToMany...eneric.get     -> GET    /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "4. DefaultOneToMany...eneric.modify  -> PATCH  /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "5. DefaultOneToMany...eneric.replace -> PUT    /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "6. DefaultOneToMany...eneric.delete  -> DELETE /api/v1/user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Grouping Should able to group routes 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultControllerGeneric.list            -> GET    /api/v2/user",
  ],
  Array [
    "2. DefaultControllerGeneric.save(data, ctx) -> POST   /api/v2/user",
  ],
  Array [
    "3. DefaultControllerGeneric.get             -> GET    /api/v2/user/:id",
  ],
  Array [
    "4. DefaultControllerGeneric.modify          -> PATCH  /api/v2/user/:id",
  ],
  Array [
    "5. DefaultControllerGeneric.replace         -> PUT    /api/v2/user/:id",
  ],
  Array [
    "6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /api/v2/user/:id",
  ],
  Array [],
  Array [
    "1. DefaultControllerGeneric.list            -> GET    /api/v1/user",
  ],
  Array [
    "2. DefaultControllerGeneric.save(data, ctx) -> POST   /api/v1/user",
  ],
  Array [
    "3. DefaultControllerGeneric.get             -> GET    /api/v1/user/:id",
  ],
  Array [
    "4. DefaultControllerGeneric.modify          -> PATCH  /api/v1/user/:id",
  ],
  Array [
    "5. DefaultControllerGeneric.replace         -> PUT    /api/v1/user/:id",
  ],
  Array [
    "6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /api/v1/user/:id",
  ],
  Array [],
]
`;

exports[`Route Generator One To Many Controller Should able to authorize relation on relation 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultOneToMany...eneric.list    -> admin GET    /user/:pid/animals",
  ],
  Array [
    "2. DefaultOneToMany...eneric.save    -> admin POST   /user/:pid/animals",
  ],
  Array [
    "3. DefaultOneToMany...eneric.get     -> admin GET    /user/:pid/animals/:id",
  ],
  Array [
    "4. DefaultOneToMany...eneric.modify  -> admin PATCH  /user/:pid/animals/:id",
  ],
  Array [
    "5. DefaultOneToMany...eneric.replace -> admin PUT    /user/:pid/animals/:id",
  ],
  Array [
    "6. DefaultOneToMany...eneric.delete  -> admin DELETE /user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator One To Many Controller Should able to authorize some method on relation 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultOneToMany...eneric.list    -> Authenticated GET    /user/:pid/animals",
  ],
  Array [
    "2. DefaultOneToMany...eneric.save    -> admin         POST   /user/:pid/animals",
  ],
  Array [
    "3. DefaultOneToMany...eneric.get     -> Authenticated GET    /user/:pid/animals/:id",
  ],
  Array [
    "4. DefaultOneToMany...eneric.modify  -> admin         PATCH  /user/:pid/animals/:id",
  ],
  Array [
    "5. DefaultOneToMany...eneric.replace -> admin         PUT    /user/:pid/animals/:id",
  ],
  Array [
    "6. DefaultOneToMany...eneric.delete  -> admin         DELETE /user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator One To Many Controller Should able to change root path 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. DefaultControllerGeneric.list            -> GET    /api/v1/user",
  ],
  Array [
    " 2. DefaultControllerGeneric.save(data, ctx) -> POST   /api/v1/user",
  ],
  Array [
    " 3. DefaultControllerGeneric.get             -> GET    /api/v1/user/:id",
  ],
  Array [
    " 4. DefaultControllerGeneric.modify          -> PATCH  /api/v1/user/:id",
  ],
  Array [
    " 5. DefaultControllerGeneric.replace         -> PUT    /api/v1/user/:id",
  ],
  Array [
    " 6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /api/v1/user/:id",
  ],
  Array [
    " 7. DefaultOneToMany...eneric.list           -> GET    /api/v1/user/:pid/animals",
  ],
  Array [
    " 8. DefaultOneToMany...eneric.save           -> POST   /api/v1/user/:pid/animals",
  ],
  Array [
    " 9. DefaultOneToMany...eneric.get            -> GET    /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "10. DefaultOneToMany...eneric.modify         -> PATCH  /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "11. DefaultOneToMany...eneric.replace        -> PUT    /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "12. DefaultOneToMany...eneric.delete         -> DELETE /api/v1/user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator One To Many Controller Should able to ignore some method of controller from entity 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultOneToMany...eneric.get     -> GET    /user/:pid/animals/:id",
  ],
  Array [
    "2. DefaultOneToMany...eneric.modify  -> PATCH  /user/:pid/animals/:id",
  ],
  Array [
    "3. DefaultOneToMany...eneric.replace -> PUT    /user/:pid/animals/:id",
  ],
  Array [
    "4. DefaultOneToMany...eneric.delete  -> DELETE /user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator One To Many Controller Should able to specify ID type by providing decorator 1`] = `
Array [
  Object {
    "name": "list",
    "pars": Array [
      Object {
        "name": "pid",
        "type": Number,
      },
      Object {
        "name": "offset",
        "type": Number,
      },
      Object {
        "name": "limit",
        "type": Number,
      },
      Object {
        "name": "filter",
        "type": Animal,
      },
      Object {
        "name": "select",
        "type": String,
      },
      Object {
        "name": "order",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "save",
    "pars": Array [
      Object {
        "name": "pid",
        "type": Number,
      },
      Object {
        "name": "data",
        "type": Animal,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "get",
    "pars": Array [
      Object {
        "name": "pid",
        "type": Number,
      },
      Object {
        "name": "id",
        "type": Number,
      },
      Object {
        "name": "select",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "modify",
    "pars": Array [
      Object {
        "name": "pid",
        "type": Number,
      },
      Object {
        "name": "id",
        "type": Number,
      },
      Object {
        "name": "data",
        "type": Animal,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "replace",
    "pars": Array [
      Object {
        "name": "pid",
        "type": Number,
      },
      Object {
        "name": "id",
        "type": Number,
      },
      Object {
        "name": "data",
        "type": Animal,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "delete",
    "pars": Array [
      Object {
        "name": "pid",
        "type": Number,
      },
      Object {
        "name": "id",
        "type": Number,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
]
`;

exports[`Route Generator One To Many Controller Should able to specify relation 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. DefaultOneToMany...eneric.list    -> GET    /user/:pid/animals",
  ],
  Array [
    "2. DefaultOneToMany...eneric.save    -> POST   /user/:pid/animals",
  ],
  Array [
    "3. DefaultOneToMany...eneric.get     -> GET    /user/:pid/animals/:id",
  ],
  Array [
    "4. DefaultOneToMany...eneric.modify  -> PATCH  /user/:pid/animals/:id",
  ],
  Array [
    "5. DefaultOneToMany...eneric.replace -> PUT    /user/:pid/animals/:id",
  ],
  Array [
    "6. DefaultOneToMany...eneric.delete  -> DELETE /user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator One To Many Controller Should able to use custom controller 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MyCustomOneToMan...eneric.list    -> GET    /api/v1/user/:pid/animals",
  ],
  Array [
    "2. MyCustomOneToMan...eneric.save    -> POST   /api/v1/user/:pid/animals",
  ],
  Array [
    "3. MyCustomOneToMan...eneric.get     -> GET    /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "4. MyCustomOneToMan...eneric.modify  -> PATCH  /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "5. MyCustomOneToMan...eneric.replace -> PUT    /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "6. MyCustomOneToMan...eneric.delete  -> DELETE /api/v1/user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator One To Many Controller Should generate routes with parameter property entity 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. DefaultControllerGeneric.list            -> GET    /user",
  ],
  Array [
    " 2. DefaultControllerGeneric.save(data, ctx) -> POST   /user",
  ],
  Array [
    " 3. DefaultControllerGeneric.get             -> GET    /user/:id",
  ],
  Array [
    " 4. DefaultControllerGeneric.modify          -> PATCH  /user/:id",
  ],
  Array [
    " 5. DefaultControllerGeneric.replace         -> PUT    /user/:id",
  ],
  Array [
    " 6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /user/:id",
  ],
  Array [
    " 7. DefaultOneToMany...eneric.list           -> GET    /user/:pid/animals",
  ],
  Array [
    " 8. DefaultOneToMany...eneric.save           -> POST   /user/:pid/animals",
  ],
  Array [
    " 9. DefaultOneToMany...eneric.get            -> GET    /user/:pid/animals/:id",
  ],
  Array [
    "10. DefaultOneToMany...eneric.modify         -> PATCH  /user/:pid/animals/:id",
  ],
  Array [
    "11. DefaultOneToMany...eneric.replace        -> PUT    /user/:pid/animals/:id",
  ],
  Array [
    "12. DefaultOneToMany...eneric.delete         -> DELETE /user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator One To Many Controller Should generate routes with property field entity 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. DefaultControllerGeneric.list            -> GET    /user",
  ],
  Array [
    " 2. DefaultControllerGeneric.save(data, ctx) -> POST   /user",
  ],
  Array [
    " 3. DefaultControllerGeneric.get             -> GET    /user/:id",
  ],
  Array [
    " 4. DefaultControllerGeneric.modify          -> PATCH  /user/:id",
  ],
  Array [
    " 5. DefaultControllerGeneric.replace         -> PUT    /user/:id",
  ],
  Array [
    " 6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /user/:id",
  ],
  Array [
    " 7. DefaultOneToMany...eneric.list           -> GET    /user/:pid/animals",
  ],
  Array [
    " 8. DefaultOneToMany...eneric.save           -> POST   /user/:pid/animals",
  ],
  Array [
    " 9. DefaultOneToMany...eneric.get            -> GET    /user/:pid/animals/:id",
  ],
  Array [
    "10. DefaultOneToMany...eneric.modify         -> PATCH  /user/:pid/animals/:id",
  ],
  Array [
    "11. DefaultOneToMany...eneric.replace        -> PUT    /user/:pid/animals/:id",
  ],
  Array [
    "12. DefaultOneToMany...eneric.delete         -> DELETE /user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator One To Many Controller Should throw error properly 1`] = `Array []`;

exports[`Route Generator One To Many Controller Should throw error when the relation doesn't have type information 1`] = `
Array [
  Array [
    [Error: PLUM1010: User.animals marked with @route.controller() but doesn't have type information],
  ],
]
`;

exports[`Route Generator One To Many Controller Should use string as default id if no ID type specified 1`] = `
Array [
  Object {
    "name": "list",
    "pars": Array [
      Object {
        "name": "pid",
        "type": String,
      },
      Object {
        "name": "offset",
        "type": Number,
      },
      Object {
        "name": "limit",
        "type": Number,
      },
      Object {
        "name": "filter",
        "type": Animal,
      },
      Object {
        "name": "select",
        "type": String,
      },
      Object {
        "name": "order",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "save",
    "pars": Array [
      Object {
        "name": "pid",
        "type": String,
      },
      Object {
        "name": "data",
        "type": Animal,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "get",
    "pars": Array [
      Object {
        "name": "pid",
        "type": String,
      },
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "select",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "modify",
    "pars": Array [
      Object {
        "name": "pid",
        "type": String,
      },
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "data",
        "type": Animal,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "replace",
    "pars": Array [
      Object {
        "name": "pid",
        "type": String,
      },
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "data",
        "type": Animal,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
  Object {
    "name": "delete",
    "pars": Array [
      Object {
        "name": "pid",
        "type": String,
      },
      Object {
        "name": "id",
        "type": String,
      },
      Object {
        "name": "ctx",
        "type": Object,
      },
    ],
  },
]
`;

exports[`Route Generator Should able to specify entity directory 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. DefaultControllerGeneric.list            -> GET    /animal",
  ],
  Array [
    " 2. DefaultControllerGeneric.save(data, ctx) -> POST   /animal",
  ],
  Array [
    " 3. DefaultControllerGeneric.get             -> GET    /animal/:id",
  ],
  Array [
    " 4. DefaultControllerGeneric.modify          -> PATCH  /animal/:id",
  ],
  Array [
    " 5. DefaultControllerGeneric.replace         -> PUT    /animal/:id",
  ],
  Array [
    " 6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /animal/:id",
  ],
  Array [
    " 7. DefaultControllerGeneric.list            -> GET    /user",
  ],
  Array [
    " 8. DefaultControllerGeneric.save(data, ctx) -> POST   /user",
  ],
  Array [
    " 9. DefaultControllerGeneric.get             -> GET    /user/:id",
  ],
  Array [
    "10. DefaultControllerGeneric.modify          -> PATCH  /user/:id",
  ],
  Array [
    "11. DefaultControllerGeneric.replace         -> PUT    /user/:id",
  ],
  Array [
    "12. DefaultControllerGeneric.delete(id, ctx) -> DELETE /user/:id",
  ],
  Array [
    "13. DefaultOneToMany...eneric.list           -> GET    /user/:pid/animals",
  ],
  Array [
    "14. DefaultOneToMany...eneric.save           -> POST   /user/:pid/animals",
  ],
  Array [
    "15. DefaultOneToMany...eneric.get            -> GET    /user/:pid/animals/:id",
  ],
  Array [
    "16. DefaultOneToMany...eneric.modify         -> PATCH  /user/:pid/animals/:id",
  ],
  Array [
    "17. DefaultOneToMany...eneric.replace        -> PUT    /user/:pid/animals/:id",
  ],
  Array [
    "18. DefaultOneToMany...eneric.delete         -> DELETE /user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Should able to specify entity directory with relative path 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. DefaultControllerGeneric.list            -> GET    /animal",
  ],
  Array [
    " 2. DefaultControllerGeneric.save(data, ctx) -> POST   /animal",
  ],
  Array [
    " 3. DefaultControllerGeneric.get             -> GET    /animal/:id",
  ],
  Array [
    " 4. DefaultControllerGeneric.modify          -> PATCH  /animal/:id",
  ],
  Array [
    " 5. DefaultControllerGeneric.replace         -> PUT    /animal/:id",
  ],
  Array [
    " 6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /animal/:id",
  ],
  Array [
    " 7. DefaultControllerGeneric.list            -> GET    /user",
  ],
  Array [
    " 8. DefaultControllerGeneric.save(data, ctx) -> POST   /user",
  ],
  Array [
    " 9. DefaultControllerGeneric.get             -> GET    /user/:id",
  ],
  Array [
    "10. DefaultControllerGeneric.modify          -> PATCH  /user/:id",
  ],
  Array [
    "11. DefaultControllerGeneric.replace         -> PUT    /user/:id",
  ],
  Array [
    "12. DefaultControllerGeneric.delete(id, ctx) -> DELETE /user/:id",
  ],
  Array [
    "13. DefaultOneToMany...eneric.list           -> GET    /user/:pid/animals",
  ],
  Array [
    "14. DefaultOneToMany...eneric.save           -> POST   /user/:pid/animals",
  ],
  Array [
    "15. DefaultOneToMany...eneric.get            -> GET    /user/:pid/animals/:id",
  ],
  Array [
    "16. DefaultOneToMany...eneric.modify         -> PATCH  /user/:pid/animals/:id",
  ],
  Array [
    "17. DefaultOneToMany...eneric.replace        -> PUT    /user/:pid/animals/:id",
  ],
  Array [
    "18. DefaultOneToMany...eneric.delete         -> DELETE /user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Should able to specify nested directories 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. DefaultControllerGeneric.list            -> GET    /api/v1/animal",
  ],
  Array [
    " 2. DefaultControllerGeneric.save(data, ctx) -> POST   /api/v1/animal",
  ],
  Array [
    " 3. DefaultControllerGeneric.get             -> GET    /api/v1/animal/:id",
  ],
  Array [
    " 4. DefaultControllerGeneric.modify          -> PATCH  /api/v1/animal/:id",
  ],
  Array [
    " 5. DefaultControllerGeneric.replace         -> PUT    /api/v1/animal/:id",
  ],
  Array [
    " 6. DefaultControllerGeneric.delete(id, ctx) -> DELETE /api/v1/animal/:id",
  ],
  Array [
    " 7. DefaultControllerGeneric.list            -> GET    /api/v1/user",
  ],
  Array [
    " 8. DefaultControllerGeneric.save(data, ctx) -> POST   /api/v1/user",
  ],
  Array [
    " 9. DefaultControllerGeneric.get             -> GET    /api/v1/user/:id",
  ],
  Array [
    "10. DefaultControllerGeneric.modify          -> PATCH  /api/v1/user/:id",
  ],
  Array [
    "11. DefaultControllerGeneric.replace         -> PUT    /api/v1/user/:id",
  ],
  Array [
    "12. DefaultControllerGeneric.delete(id, ctx) -> DELETE /api/v1/user/:id",
  ],
  Array [
    "13. DefaultOneToMany...eneric.list           -> GET    /api/v1/user/:pid/animals",
  ],
  Array [
    "14. DefaultOneToMany...eneric.save           -> POST   /api/v1/user/:pid/animals",
  ],
  Array [
    "15. DefaultOneToMany...eneric.get            -> GET    /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "16. DefaultOneToMany...eneric.modify         -> PATCH  /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "17. DefaultOneToMany...eneric.replace        -> PUT    /api/v1/user/:pid/animals/:id",
  ],
  Array [
    "18. DefaultOneToMany...eneric.delete         -> DELETE /api/v1/user/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Route Generator Should initiate IdentifierResult properly 1`] = `
IdentifierResult {
  "id": 20,
}
`;
